# docs/swagger.yaml
@@ -57,6 +57,43 @@ definitions:
       username:
         type: string
     type: object
+  models.Driver:
+    properties:
+      active:
+        type: boolean
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      driver_license_number:
+        type: string
+      id:
+        type: string
+      license_expiry:
+        description: e.g., 2025-12-31T23:59:59Z
+        type: string
+      updated_at:
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/models.User'
+        description: Embedding the User struct to access user information like name,
+          email, etc.
+      user_id:
+        description: Reference to the User model
+        type: string
+    type: object
+  models.DriverRequest:
+    properties:
+      driver_license_number:
+        type: string
+      license_expiry:
+        type: string
+      user_id:
+        type: string
+    type: object
   models.Engine:
     properties:
       car_range:
@@ -132,8 +169,6 @@ definitions:
       role:
         type: string
       username:
-        type: string
-      uuid:
         type: string
     type: object
 host: localhost:8080
@@ -319,6 +354,244 @@ paths:
       summary: Update a car
       tags:
       - Car
+  /api/v1/drivers:
+    get:
+      consumes:
+      - application/json
+      description: Get all drivers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Driver'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Get all drivers
+      tags:
+      - Driver
+    post:
+      consumes:
+      - application/json
+      description: Create a new driver
+      parameters:
+      - description: Driver object that needs to be created
+        in: body
+        name: driver
+        required: true
+        schema:
+          $ref: '#/definitions/models.DriverRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid request payload
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Create driver
+      tags:
+      - Driver
+  /api/v1/drivers/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Soft Delete driver by ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Driver not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Soft Delete driver
+      tags:
+      - Driver
+    get:
+      consumes:
+      - application/json
+      description: Get driver profile by ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Driver not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Get driver profile
+      tags:
+      - Driver
+    put:
+      consumes:
+      - application/json
+      description: Update driver profile by ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Driver object that needs to be updated
+        in: body
+        name: driver
+        required: true
+        schema:
+          $ref: '#/definitions/models.DriverRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Driver not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Update driver profile
+      tags:
+      - Driver
+  /api/v1/drivers/{id}/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Delete driver by ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Driver not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Delete driver
+      tags:
+      - Driver
+  /api/v1/drivers/{id}/toggle-status:
+    put:
+      consumes:
+      - application/json
+      description: Toggle driver status by ID
+      parameters:
+      - description: Driver ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Active status
+        in: query
+        name: active
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Driver not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Toggle driver status
+      tags:
+      - Driver
   /api/v1/engines:
     post:
       consumes:
@@ -539,40 +812,6 @@ paths:
       tags:
       - User
   /api/v1/users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Invalid ID
-          schema:
-            type: string
-        "404":
-          description: User not found
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      security:
-      - Bearer: []
-      summary: Delete user
-      tags:
-      - User
     get:
       consumes:
       - application/json
@@ -647,7 +886,82 @@ paths:
       summary: Update user profile
       tags:
       - User
-  /api/v1/users/{id}/password:
+  /api/v1/users/{id}/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: User not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Delete user
+      tags:
+      - User
+  /api/v1/users/{id}/toggle-status:
+    put:
+      consumes:
+      - application/json
+      description: Toggle user status by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Active status
+        in: query
+        name: active
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: User not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Toggle user status
+      tags:
+      - User
+  /api/v1/users/{id}/update-password:
     put:
       consumes:
       - application/json
@@ -686,46 +1000,6 @@ paths:
       security:
       - Bearer: []
       summary: Update user password
-      tags:
-      - User
-  /api/v1/users/{id}/status:
-    put:
-      consumes:
-      - application/json
-      description: Toggle user status by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Active status
-        in: query
-        name: active
-        required: true
-        type: boolean
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "400":
-          description: Invalid ID
-          schema:
-            type: string
-        "404":
-          description: User not found
-          schema:
-            type: string
-        "500":
-          description: Internal server error
-          schema:
-            type: string
-      security:
-      - Bearer: []
-      summary: Toggle user status
       tags:
       - User
 securityDefinitions:
